# mlxrl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: audit_phase4_config.py  external_baseline_worker.py  run_phase4.py
benchmarks/results/: gate1_mlxrl_after.jsonl  gate1_mlxrl_after.md  gate1_mlxrl_after_final.jsonl  gate1_mlxrl_after_final.md  gate1_mlxrl_after_noprefixsync.jsonl  gate1_mlxrl_after_noprefixsync.md  gate1_mlxrl_before.jsonl  gate1_mlxrl_before.md  gate2_unified_smoke.jsonl  gate2_unified_smoke.md  gate3_mlx_tune_sync_256.jsonl  gate3_mlx_tune_sync_256.md  gate3_sync_blocked.jsonl  gate3_sync_blocked.md  gate3_sync_smoke.jsonl  gate3_sync_smoke.md  gate4_config_audit.json  gate4_config_audit.md  gate4_sampler_smoke.jsonl  gate4_sampler_smoke.md  gate5_full_reconciled.jsonl  gate5_full_reconciled.md  phase4_external_smoke.jsonl  phase4_external_smoke.md  phase4_full_all_targets.jsonl  phase4_full_all_targets.md  phase4_local_mlxrl_vs_mlx_lm.jsonl  phase4_local_mlxrl_vs_mlx_lm.md  phase4_mlx_lm_g4_smoke.jsonl  phase4_mlx_lm_g4_smoke.md
examples/: qwen35_9b_g2_checkpoint.toml  qwen3_0_6b_gigpo_recurring.toml  qwen3_0_6b_grpo.toml
mlxrl/: __init__.py  algorithm.py  cli.py  config.py  echo.py  trajectory.py
mlxrl/algo/: __init__.py  gigpo.py  grpo.py
mlxrl/data/: __init__.py  gsm8k.py  rewards.py
mlxrl/env/: __init__.py  base.py  reference.py
mlxrl/policy/: __init__.py  logprobs.py  model.py  trajectory_logprobs.py
mlxrl/rollout/: __init__.py  agentic.py  naive.py  optimized.py
mlxrl/train/: __init__.py  grpo.py  reference.py  trajectory.py
tests/: test_agentic_env.py  test_agentic_rollout.py  test_benchmark_metrics.py  test_cli.py  test_config.py  test_echo.py  test_gigpo.py  test_grpo.py  test_import_direction.py  test_optimized_rollout.py  test_policy_logprobs.py  test_policy_model.py  test_rewards.py  test_train_grpo.py  test_train_trajectory.py  test_trajectory_logprobs.py
