[project]
name = "mlxrl"
version = "0.1.0"
description = "Small single-process RL post-training for LLMs on Apple Silicon with MLX."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
keywords = ["mlx", "rl", "grpo", "qlora", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
]

[project.scripts]
mlxrl = "mlxrl.cli:main"

[dependency-groups]
dev = [
    "mlx-lm-lora>=2.1.0",
    "mlx-tune>=0.5.1",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".uv-cache",
    ".venv",
    ".uv-python",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
include = ["mlxrl", "tests", "benchmarks"]

[tool.pytest.ini_options]
markers = [
    "metal: requires Apple MLX/Metal runtime and is skipped by Linux CI",
]
