[project]
name = "inductive-mlxrl"
version = "0.2.0"
description = "Small single-process RL post-training for LLMs on Apple Silicon with MLX."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
keywords = ["mlx", "rl", "grpo", "qlora", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.31.2; python_version < '3.15' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.31.3; python_version < '3.15' and platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.urls]
Homepage = "https://github.com/inductiveML/mlxrl"
Repository = "https://github.com/inductiveML/mlxrl"
Issues = "https://github.com/inductiveML/mlxrl/issues"
Changelog = "https://github.com/inductiveML/mlxrl/blob/main/CHANGELOG.md"

[project.scripts]
mlxrl = "mlxrl.cli:main"

[dependency-groups]
dev = [
    "mlx-lm-lora>=2.1.0",
    "mlx-tune>=0.5.1",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "benchmarks",
    "examples",
    "mlxrl",
    "tests",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "DESIGN.md",
    "LICENSE",
    "README.md",
    "THIRD_PARTY_LICENSES.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["mlxrl"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".uv-cache",
    ".venv",
    ".uv-python",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
include = ["mlxrl", "tests", "benchmarks"]

[tool.pytest.ini_options]
markers = [
    "metal: requires Apple MLX/Metal runtime and is skipped by Linux CI",
]
